--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "bun --bun next build --webpack",
     "start": "bun --bun next start",
     "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,css,yml,yaml}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,css,yml,yaml}\"",
     "test": "vitest",
     "test:unit": "vitest run --dir tests/unit",
     "test:integration": "vitest run --dir tests/integration",
@@ -19,7 +22,9 @@
     "test:e2e:debug": "playwright test --debug",
     "test:all": "bun test:coverage && bun test:e2e",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "cd .. && husky client/.husky",
+    "commitlint": "commitlint --edit"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -43,6 +48,8 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@playwright/test": "^1.57.0",
     "@storybook/addon-docs": "^10.1.4",
     "@storybook/addon-links": "^10.1.4",
@@ -61,8 +68,11 @@
     "eslint-config-next": "16.0.6",
     "eslint-plugin-storybook": "10.1.3",
     "happy-dom": "^20.0.11",
+    "husky": "^9.1.7",
     "jsdom": "^27.2.0",
+    "lint-staged": "^15.3.0",
     "msw": "^2.12.3",
+    "prettier": "^3.4.2",
     "storybook": "^10.1.4",
     "tailwindcss": "^4",
     "typescript": "^5",
