refactor: rename project from Bemyre to Ayla Designs
- Updated project name in Dockerfile, README, and security documentation.
- Changed environment variable URLs and email addresses to reflect new branding.
- Modified theme and component documentation to align with Ayla Designs' design language.
- Updated all instances of "Bemyre" to "Ayla Designs" across components, tests, and utility files.
- Adjusted metadata for SEO to match new branding.
- Refactored error handling and logging to use Ayla Designs naming conventions.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # =============================================================================
-# BEMYRE v2 Client - Environment Variables
+# Ayla Designs Client - Environment Variables
 # =============================================================================
 # Copy this file to .env.local and fill in the values
 #
@@ -15,7 +15,7 @@
 # Backend API URL
 # - Must be prefixed with NEXT_PUBLIC_ to be accessible in the browser
 # - Default: http://localhost:8000 (FastAPI backend in development)
-# - Production: Set to your backend API URL (e.g., https://api.bemyre.com)
+# - Production: Set to your backend API URL (e.g., https://api.ayladesigns.me)
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # =============================================================================
