--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 # =============================================================================
-# BEMYRE Client - Continuous Integration
+# Ayla Designs Client - Continuous Integration
 # =============================================================================
 # Triggers:
 #   - Pull requests to main
